// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Drawer /> should add custom classes 1`] = `
<Drawer
  alwaysActive={false}
  animation={
    Object {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className="custom-class-name"
  isOpen={true}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[Function]}
  onOpen={[Function]}
>
  <div
    className="custom-class-name css-1rg7udn css-1dwe0qx"
    onAnimationEnd={[Function]}
    style={Object {}}
  />
</Drawer>
`;

exports[`<Drawer /> should execute callback when drawer close animation did end 1`] = `
<Drawer
  alwaysActive={false}
  animation={
    Object {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className="custom-class-name"
  isOpen={true}
  onClose={[MockFunction]}
  onDidClose={[MockFunction]}
  onDidOpen={[Function]}
  onOpen={[Function]}
>
  <div
    className="custom-class-name css-1rg7udn css-1dwe0qx"
    onAnimationEnd={[Function]}
    style={Object {}}
  />
</Drawer>
`;

exports[`<Drawer /> should execute callback when drawer open animation did end 1`] = `
<Drawer
  alwaysActive={false}
  animation={
    Object {
      "duration": null,
      "in": "",
      "out": "",
    }
  }
  className="custom-class-name"
  isOpen={false}
  onClose={[Function]}
  onDidClose={[Function]}
  onDidOpen={[MockFunction]}
  onOpen={[MockFunction]}
/>
`;

exports[`<Drawer /> should render 1`] = `""`;
